--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button class="buttons-2" onclick="window.location.href='index3.html'"> Sales</button>
         <button class="buttons-3" onclick="window.location.href='index4.html'">stores</button>
         <button class="buttons-4" onclick="window.location.href='https://amrmaherfawziabdeleh1237.blogspot.com/'"> website</button>
+        <button class="buttons-3" onclick="window.location.href='Supervisor.exe'">downlod</button>
     </div>
 </section>
 </body>
