--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Supervisor</title>
     <link rel="stylesheet" href="styles4.css">
+    <link rel="shortcut icon" type="image/x-icon" href="download%20(1).ico">
     <script src="script2.js" defer></script>
 </head>
 <body>
