--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sales</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="shortcut icon" type="image/x-icon" href="download%20(1).ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
