--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stores</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="download%20(1).ico">
     <script src="script.js" defer></script>
     <header>
         <a href="index4.html" class="logo">Supervisor</a>
